--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@
                                 </li>
                                 <li class=" sub "><a href="javascript:void(0)">Vay Cá Nhân Trực Tuyến<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                                     <ul class="vn4-nav-children ">
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Vay mua nhà</a></li>
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Vay mua xe</a></li>
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Vay mua xe đã qua sử dụng</a></li>
-                                        <li class=" active "><a href="/pages/vi/loan_registration.html">Vay Tiêu Dùng</a></li>
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Vay tiêu dùng trực tuyến</a></li>
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Chương Trình Hợp Tác</a></li>
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Vay Tiêu dùng Bảo lãnh</a></li>
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Trả nợ khoản vay thế chấp Bất động sản tại Ngân hàng khác</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Vay mua nhà</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Vay mua xe</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Vay mua xe đã qua sử dụng</a></li>
+                                        <li class=" active "><a href="/pages/vi/step1.html">Vay Tiêu Dùng</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Vay tiêu dùng trực tuyến</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Chương Trình Hợp Tác</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Vay Tiêu dùng Bảo lãnh</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Trả nợ khoản vay thế chấp Bất động sản tại Ngân hàng khác</a></li>
                                     </ul>
                                 </li>
                                 <li class=" sub "><a href="javascript:void(0)">Ngân Hàng Điện Tử<i class="fa fa-angle-right" aria-hidden="true"></i></a>
@@ -294,8 +294,8 @@
                             <ul class="vn4-nav-children ">
                                 <li class=" sub "><a href="javascript:void(0)">Vay tài trợ kinh doanh<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                                     <ul class="vn4-nav-children ">
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Vay bổ sung vốn lưu động</a></li>
-                                        <li class=" "><a href="/pages/vi/loan_registration.html">Vay vốn đầu tư kinh doanh</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Vay bổ sung vốn lưu động</a></li>
+                                        <li class=" "><a href="/pages/vi/step1.html">Vay vốn đầu tư kinh doanh</a></li>
                                     </ul>
                                 </li>
                                 <li class=" "><a href="https://shinhan.com.vn/vi/shinhan_soho_category/tai-khoan-va-tien-gui-3.html">Tài khoản và tiền gửi</a></li>
@@ -563,16 +563,16 @@
                                         </div>
                                     </div>
                                     <div class="box">
-                                        <h3 class="t-blue"><a href="/pages/vi/loan_registration.html">Vay Cá Nhân Trực Tuyến</a></h3>
+                                        <h3 class="t-blue"><a href="/pages/vi/step1.html">Vay Cá Nhân Trực Tuyến</a></h3>
                                         <div class="list">
                                             <a href="/pages/vi/personal/vay-mua-nha.html" class="sub-item-">Vay mua nhà</a>
                                             <a href="/pages/vi/personal/vay-mua-xe.html" class="sub-item-">Vay mua xe</a>
                                             <a href="/pages/vi/personal/vay-mua-xe-da-qua-su-dung.html" class="sub-item-">Vay mua xe đã qua sử dụng</a>
                                             <a href="/pages/vi/personal/vay-tieu-dung-truc-tuyen.html" class="sub-item-">Vay Tiêu Dùng</a>
                                             <a href="/pages/vi/personal/vay-tieu-dung-truc-tuyen.html" class="sub-item-">Vay tiêu dùng trực tuyến</a>
-                                            <a href="/pages/vi/personal/loan_registration.html" class="sub-item-">Chương Trình Hợp Tác</a>
-                                            <a href="/pages/vi/personal/loan_registration.htmlvay-tieu-dung-bao-lanh.html" class="sub-item-">Vay Tiêu dùng Bảo lãnh</a>
-                                            <a href="/pages/vi/personal/loan_registration.html" class="sub-item-">Trả nợ khoản vay thế chấp Bất động sản tại Ngân hàng khác</a>
+                                            <a href="/pages/vi/personal/step1.html" class="sub-item-">Chương Trình Hợp Tác</a>
+                                            <a href="/pages/vi/personal/step1.htmlvay-tieu-dung-bao-lanh.html" class="sub-item-">Vay Tiêu dùng Bảo lãnh</a>
+                                            <a href="/pages/vi/personal/step1.html" class="sub-item-">Trả nợ khoản vay thế chấp Bất động sản tại Ngân hàng khác</a>
                                         </div>
                                     </div>
                                 </div>
@@ -841,7 +841,7 @@
                                             <a href="/public/uploads/static-file/Quick%20access/Huong%20dan%20Kich%20Hoat%20%26%20Tao%20ma%20PIN%20the%20Visa%20Ca%20nhan%20qua%20Internet%20Banking%20VN.pdf" target="_blank" class="link">> Hướng dẫn kích hoạt/Tạo mã PIN trực tuyến</a>
                                             <a href="/public/uploads/PDF%20Card/Standard_Fee_Charges_(Credit_Card)_VN.pdf" target="_blank" class="link">> Biểu phí dịch vụ thẻ</a>
                                             <a href="/pages/vi/mau-don.html" class="link">> Mẫu Đơn</a>
-                                            <a href="/pages/vi/loan_registration.html" style="display: inline-block;font-weight: bold;text-decoration: none;background: linear-gradient(#f18b53, #f57a27, #e66c18);color: white;padding: 0px 25px;border-radius: 13px;box-shadow: 2px 3px 8px 1px #8c8c8c;">ĐĂNG KÝ NGAY</a>
+                                            <a href="/pages/vi/step1.html" style="display: inline-block;font-weight: bold;text-decoration: none;background: linear-gradient(#f18b53, #f57a27, #e66c18);color: white;padding: 0px 25px;border-radius: 13px;box-shadow: 2px 3px 8px 1px #8c8c8c;">ĐĂNG KÝ NGAY</a>
                                             <a href="https://shinhan.com.vn/vi/card-referral" style="display: inline-block;font-weight: bold;text-decoration: none;background: linear-gradient(#f18b53, #f57a27, #e66c18);color: white;padding: 0px 25px;border-radius: 13px;box-shadow: 2px 3px 8px 1px #8c8c8c;">GIỚI THIỆU BẠN BÈ</a>
                                         </div>
                                     </div>
@@ -880,7 +880,7 @@
                         <div class="tab active"><a href="/pages/vi/lai-suat-vay.html"><span>Lợi ích</span></a></div>
                         <div class="tab active"><a href="/pages/vi/Evaluate-conditions.html"><span>Giảy Ngân Khoản Vay</span></a></div>
                         <div class="tab" class="active"><a href="/pages/vi/dieu-khoan-su-dung.html"><span>Giấy Tờ Cần Thiết</span></a></div>
-                        <div class="tab" class="active"><a href="/pages/vi/loan_registration.html" class="btn btn-primary">Đăng ký vay</a></div>
+                        <div class="tab" class="active"><a href="/pages/vi/step1.html" class="btn btn-primary">Đăng ký vay</a></div>
                         <div class="tab" class="active"><a href="/pages/vi/check_result.html"><span>Xem kết quả</span></a></div>
                     </div>
                 </div>
@@ -897,7 +897,7 @@
                         <div class="ct-right col-sm-8 col-xs-12">
                             <p>Với gói Vay tiêu dùng lãi suất ưu đãi tại Ngân hàng Shinhan, bạn có thể thực hiện mọi kế hoạch tài chính của mình và tận hưởng cuộc sống một cách trọn vẹn.</p>
                             <p>
-                              <span class="btn-main left"><a href="/pages/vi/loan_registration.html"><span>Đăng ký ngay</span></a></span>
+                              <span class="btn-main left"><a href="/pages/vi/step1.html"><span>Đăng ký ngay</span></a></span>
                                 <span class="btn-main left yellow"><a href="/pages/vi/loan_calculator.html"><span>Tính khoản vay</span></a></span>
                               </li> 
                                 <span class="spinner"><i class="fas fa-spinner fa-spin"></i></span>
